--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -6,209 +6,154 @@
 
 
 
-        <h2 class="display-4">SETTINGS</h2>
+        <h2 class="display-4"> <i class="fas fa-cog"></i> Settings</h2>
 
 
-        {{!-- ====== SETTINGS TABS ======== --}}
+        <div class="line"></div>
 
-        <div id="settingNav" class="mb-3">
-            <ul class="nav nav-tabs" id="myTab" role="tablist">
-                <li class="nav-item">
-                    <a class="nav-link active" id="personal-tab" data-toggle="tab" href="#personal" role="tab"
-                        aria-controls="personal" aria-selected="true">Personal Info</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab"
-                        aria-controls="profile" aria-selected="true">Profile</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" id="team-tab" data-toggle="tab" href="#team" role="tab" aria-controls="team"
-                        aria-selected="true">Manage Team</a>
-                </li>
+        {{!-- ======== COLLAPSIBLE CONTENT ============ --}}
 
-            </ul>
+        <div id="accordion">
+            <div class="card">
+                <div class="card-header" id="headingOne">
+                    <div class="row">
+                        <div class="col-11">
+                            <h5 class="mb-0">
+                                <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne"
+                                    aria-expanded="true" aria-controls="collapseOne">
+                                    <h2>Personal Info</h2>
 
+                                </button>
 
-        </div>
-        {{!-- ====== SETTINGS TABS END ======== --}}
-
-
-        <div class="tab-content">
-            <div class="tab-pane active" id="personal" role="tabpanel" aria-labelledby="personal-tab">
-                <div class="row">
-                    <div class="col-11">
-                        <h2>Personal Info</h2>
+                            </h5>
+                        </div>
+                        <div class="col-1"><button type="submit" id="updatePersonal"
+                                class="btn btn-primary justify-content-end" data-toggle="tooltip" data-placement="top"
+                                title="Update Personal Info">Update</button>
+                        </div>
                     </div>
-                    <div class="col-1">
-                        <button type="submit" id="updatePersonal" class="btn btn-primary" data-toggle="tooltip"
-                            data-placement="top" title="Update Personal Info">Update</button>
-                    </div>
+
+
                 </div>
 
-                {{!-- ======== DISABLED FORM ============= --}}
-                <form>
-                    <fieldset disabled id="disabledPersonal">
-                        <div class="form-row">
+                <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion"
+                    active>
+                    <div class="card-body">
+                        <form>
+                            <fieldset disabled id="disabledPersonal">
+                                <div class="form-row">
 
-                            <div class="form-group col-md-6">
-                                <label for="inputFirstName">First Name</label>
-                                <input type="text" class="form-control" placeholder="First name">
-                            </div>
-                            <div class="form-group col-md-6">
-                                <label for="inputLastName">Last Name</label>
-                                <input type="text" class="form-control" placeholder="Last name">
-                            </div>
-                        </div>
-                        <div class="form-group col-md-6 p-0">
-                            <label for="inputEmail4">Email</label>
-                            <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
-                        </div>
-                        <div class="form-group">
-                            <label for="inputAddress">Address</label>
-                            <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
-                        </div>
-
-                        <div class="form-row">
-                            <div class="form-group col-md-6">
-                                <label for="inputCity">City</label>
-                                <input type="text" class="form-control" id="inputCity">
-                            </div>
-                            <div class="form-group col-md-4">
-                                <label for="inputState">State</label>
-                                <select id="inputState" class="form-control">
-                                    <option selected>Choose...</option>
-                                    <option>...</option>
-                                </select>
-                            </div>
-                            <div class="form-group col-md-2">
-                                <label for="inputZip">Zip</label>
-                                <input type="text" class="form-control" id="inputZip">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="gridCheck">
-                                <label class="form-check-label" for="gridCheck">
-                                    Check me out
-                                </label>
-                            </div>
-                        </div>
-                        <button type="submit" class="btn btn-primary" id="saveBtn" style="display: none;">Save
-                            Info</button>
-                        <button type="submit" class="btn btn-warning" id="cancelBtn"
-                            style="display: none;">Cancel</button>
-                    </fieldset>
-                </form>
-
-                {{!-- ======== DISABLED FORM END ============= --}}
-
-            </div>
-
-
-
-
-
-            <div class="tab-pane" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-
-                <div class="row">
-                    <div class="col-11">
-                        <h2>Update Profile</h2>
-                    </div>
-                    <div class="col-1">
-                        <button type="submit" id="updateProfile" class="btn btn-primary" data-toggle="tooltip"
-                            data-placement="top" title="Update Personal Info">Update</button>
-                    </div>
-                </div>
-                <br>
-                <form>
-                    <fieldset id="disabledProfile" disabled>
-
-                        <div class="row">
-                            <div class="col-2"> <img src={{img}} width="200" height="200" class="img-fluid"
-                                    id="updatePhoto">
-                            </div>
-                            <div class="col-10" id="uploadImg" style="display: none;">
-                                {{msg}}
-
-
-
-                                <form action="/upload" method="POST" enctype="multipart/form-data">
-                                    <div class="form-group">
-
-
-                                        <input type="file" name="myImage">
+                                    <div class="form-group col-md-6">
+                                        <label for="inputFirstName">First Name</label>
+                                        <input type="text" class="form-control" placeholder="First name">
                                     </div>
-                                    <button type="submit" class="btn btn-primary">Submit</button>
-                                </form>
-                            </div>
-                        </div>
-
-
-
-
-
-                        <div class="line"></div>
-
-
-                        <div class="form-row">
-                            <div class="col-md-6">
-                                <label for="validationServerUsername">Username</label>
-                                <div class="input-group">
-                                    <input type="text" class="form-control" id="validationServerUsername"
-                                        placeholder="{{currentUser}}" aria-describedby="inputGroupPrepend3">
+                                    <div class="form-group col-md-6">
+                                        <label for="inputLastName">Last Name</label>
+                                        <input type="text" class="form-control" placeholder="Last name">
+                                    </div>
                                 </div>
-                            </div>
-                        </div>
-                        <br>
-                        <div class="form-row">
-                            <div class="form-group col-md-6">
-                                <label for="inputPassword4">Password</label>
-                                <input type="password" class="form-control" id="inputPassword4" placeholder="Password">
-                            </div>
-                        </div>
+                                <div class="form-group col-md-6 p-0">
+                                    <label for="inputEmail4">Email</label>
+                                    <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+                                </div>
 
-                        <div class="form-row">
-                            <div class="form-group col-md-6">
-                                <label for="inputJobTitle">Job Titile</label>
-                                <input type="text" class="form-control" id="inputJobTitle" placeholder="Job Title">
-                            </div>
-                        </div>
-                        <button type="submit" class="btn btn-primary" id="saveProfile" style="display: none;">Save
-                            Info</button>
-                        <button type="submit" class="btn btn-warning" id="cancelProfile"
-                            style="display: none;">Cancel</button>
-                    </fieldset>
 
-                </form>
+                                <button type="submit" class="btn btn-primary" id="saveBtn" style="display: none;">Save
+                                    Info</button>
+                                <button type="submit" class="btn btn-warning" id="cancelBtn"
+                                    style="display: none;">Cancel</button>
+                            </fieldset>
+                        </form>
+                    </div>
+                </div>
             </div>
 
-            <div class="tab-pane" id="team" role="tabpanel" aria-labelledby="team-tab">
-                <h2>Team</h2>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                    minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat. Duis aute irure dolor in
-                    reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                    pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                    culpa qui officia deserunt mollit anim id est laborum.
-                </p>
+            <div class="card">
 
-                <div class="line"></div>
+                <div class="card-header" id="headingTwo">
+
+                    <div class="row">
+                        <div class="col-11" <h5 class="mb-0">
+                            <h5>
+                                <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo"
+                                    aria-expanded="false" aria-controls="collapseTwo">
+                                    <h2>Profile Info</h2>
+
+                                </button>
+                            </h5>
+                        </div>
+                        <div class="col-1"> <button type="submit" id="updateProfile" class="btn btn-primary"
+                                data-toggle="tooltip" data-placement="top" title="Update Profile Info">Update</button>
+                        </div>
+                    </div>
+
+                </div>
+                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+                    <div class="card-body">
+                        <form>
+                            <fieldset id="disabledProfile" disabled>
+
+                                <div class="row">
+                                    <div class="col-2"> <img src={{img}} width="200" height="200" class="img-fluid"
+                                            id="updatePhoto">
+                                    </div>
+                                    <div class="col-10" id="uploadImg" style="display: none;">
+                                        {{msg}}
 
 
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                    minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat. Duis aute irure dolor in
-                    reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                    pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                    culpa qui officia deserunt mollit anim id est laborum.
-                </p>
+
+                                        <form action="/upload" method="POST" enctype="multipart/form-data">
+                                            <div class="form-group">
+
+
+                                                <input type="file" name="myImage">
+                                            </div>
+                                            <button type="submit" class="btn btn-primary">Submit</button>
+                                        </form>
+                                    </div>
+                                </div>
+
+
+
+
+
+                                <div class="line"></div>
+
+
+
+                                <br>
+                                <div class="form-row">
+                                    <div class="form-group col-md-6">
+                                        <label for="inputPassword4">Password</label>
+                                        <input type="password" class="form-control" id="inputPassword4"
+                                            placeholder="Password">
+                                    </div>
+                                </div>
+
+                                <div class="form-row">
+                                    <div class="form-group col-md-6">
+                                        <label for="inputJobTitle">Job Titile</label>
+                                        <input type="text" class="form-control" id="inputJobTitle"
+                                            placeholder="Job Title">
+                                    </div>
+                                </div>
+                                <button type="submit" class="btn btn-primary" id="saveProfile"
+                                    style="display: none;">Save
+                                    Info</button>
+                                <button type="submit" class="btn btn-warning" id="cancelProfile"
+                                    style="display: none;">Cancel</button>
+                            </fieldset>
+
+                        </form>
+                    </div>
+                </div>
             </div>
 
         </div>
+
+        {{!-- ======== COLLAPSIBLE CONTENT END ============ --}}
+
+
 
 
     </div>
