made some quick stylining changes

--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -94,8 +94,10 @@
                             <fieldset id="disabledProfile" disabled>
 
                                 <div class="row">
-                                    <div class="col-2"> <img src={{img}} width="200" height="200" class="img-fluid"
-                                            id="updatePhoto">
+
+                                    <div class="col-2">
+                                        <label for="inputProfileImg">Profile Image</label> <img src={{img}} width="250"
+                                            height="250" class="img-fluid" id="updatePhoto">
                                     </div>
                                     <div class="col-10" id="uploadImg" style="display: none;">
                                         {{msg}}
