--- a/views/tickets.handlebars
+++ b/views/tickets.handlebars
@@ -25,6 +25,7 @@
             </div>
         </div>
     </div>
+    <a href="/"><button type="button">Dashboard</button></a>
 </div>
 <script type="text/javascript" src="//media.twiliocdn.com/sdk/js/client/v1.7/twilio.min.js"></script>
 <script src="/assets/js/voice.js"></script>
