delted console.log

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -3,5 +3,7 @@
 <h2>Current User: {{currentUser}}</h2>
 
 <a href="/settings"><button type="button">Settings</button></a>
+<a href="/tickets"><button type="button">Tickets</button></a>
+
 
 <a href="/logout"><button type="button">Logout</button></a>
