started working on the tickets page, switched to viewing the collapsable settings page, and made it so that you can view user name and image on navbar on dashboard

--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -12,7 +12,7 @@
         {{!-- <div class="line"></div> --}}
 
         {{!-- ======== COLLAPSIBLE CONTENT ============ --}}
-        {{!-- 
+
         <div id="accordion">
             <div class="card">
                 <div class="card-header" id="headingOne">
@@ -151,13 +151,13 @@
                 </div>
             </div>
 
-        </div> --}}
+        </div>
 
         {{!-- ======== COLLAPSIBLE CONTENT END ============ --}}
 
 
         {{!-- ======== TABS CONTENT ============ --}}
-        <ul class="nav nav-tabs" id="myTab" role="tablist">
+        {{!-- <ul class="nav nav-tabs" id="myTab" role="tablist">
             <li class="nav-item">
                 <a class="nav-link active" id="home-tab" data-toggle="tab" href="#personal" role="tab"
                     aria-controls="personal" aria-selected="true">Personal Info</a>
@@ -280,7 +280,7 @@
             </div>
 
 
-        </div>
+        </div> --}}
 
 
         {{!-- ======== TABS CONTENT END ============ --}}
