--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -7,12 +7,24 @@
                     <form id="admin-form" class="form">
                         <h3 class="text-center text-dark"><u>Add User</u></h3>
                         <div class="form-group">
+                            <label for="firstname" class="text-dark">First Name:</label><br>
+                            <input type="text" name="firstname" id="firstname" class="form-control" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="lastname" class="text-dark">Last Name:</label><br>
+                            <input type="text" name="lastname" id="lastname" class="form-control" required>
+                        </div>
+                        <div class="form-group">
                             <label for="username" class="text-dark">Username:</label><br>
                             <input type="text" name="username" id="username" class="form-control" required>
                         </div>
                         <div class="form-group">
                             <label for="password" class="text-dark">Password:</label><br>
                             <input type="password" name="password" id="password" class="form-control" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="email" class="text-dark">Email:</label><br>
+                            <input type="text" name="email" id="email" class="form-control" required>
                         </div>
                         {{!-- <div class="form-group" id="remember">
                             <label for="remember-me" class="text-dark"><span>Remember me</span> <span><input
