--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -7,6 +7,18 @@
                     <form id="admin-form" class="form">
                         <h3 class="text-center text-dark"><u>Add User</u></h3>
                         <div class="form-group">
+                            <label for="firstName" class="text-dark">First Name:</label><br>
+                            <input type="text" name="firstName" id="firstName" class="form-control" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="lastName" class="text-dark">Last Name:</label><br>
+                            <input type="text" name="lastName" id="lastName" class="form-control" required>
+                        </div>
+                         <div class="form-group">
+                            <label for="email" class="text-dark">Email:</label><br>
+                            <input type="email" name="email" id="email" class="form-control" required>
+                        </div>
+                        <div class="form-group">
                             <label for="username" class="text-dark">Username:</label><br>
                             <input type="text" name="username" id="username" class="form-control" required>
                         </div>
