fixed the modal for the calling remvoed the tickets.handlebars and tried to mess with making partials for the two modals on the page but for some reason if they are both there you cannot interact with the other one

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -290,15 +290,14 @@ label:focus input::placeholder {
   position: relative;
 } */
 
-#customerDot {
+/* #customerDot {
   padding: 30%;
   background-color: red;
-  background: #4ea6d267;
   border-radius: 50%;
   width: fit-content;
   text-transform: uppercase;
   font-size: 1.8em;
-}
+} */
 
 /* #modalDot {
   padding: 6%;
@@ -313,6 +312,11 @@ label:focus input::placeholder {
   background-color: #7a6eb8;
   border: none;
 }
+/* 
+.create-modal {
+  border: none;
+  background-color: #d1d1d1;
+} */
 
 .modal-header,
 .modal-footer {
