changed it so that i am using both of the modal partials

--- a/views/partials/call/call-block.handlebars
+++ b/views/partials/call/call-block.handlebars
@@ -1,4 +1,4 @@
-{{!-- <div class="modal fade bd-example-modal-sm" id="exampleModalCenter" tabindex="-1" role="dialog"
+<div class="modal fade bd-example-modal-sm" id="exampleModalCenter" tabindex="-1" role="dialog"
     aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-sm" role="document">
         <div class="modal-content call-modal">
@@ -29,4 +29,4 @@
 
         </div>
     </div>
-</div> --}}
+</div>
