--- a/views/partials/createTicket/create-block.handlebars
+++ b/views/partials/createTicket/create-block.handlebars
@@ -1,4 +1,4 @@
-{{!-- <div class="modal fade bd-example-modal-lg" id="exampleModal" tabindex="-1" role="dialog"
+<div class="modal fade bd-example-modal-lg" id="exampleModal" tabindex="-1" role="dialog"
     aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content create-modal">
@@ -31,4 +31,4 @@
             </div>
         </div>
     </div>
-</div> --}}
+</div>
