--- a/views/ticket.handlebars
+++ b/views/ticket.handlebars
@@ -528,43 +528,11 @@
 
     </div>
 
-    <div class="modal fade bd-example-modal-sm" id="exampleModalCenter" tabindex="-1" role="dialog"
-        aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered modal-sm" role="document">
-            <div class="modal-content call-modal">
-                <div class="modal-header">
-
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body text-center">
-
-                    <h3 class="modalAv avatar">CD</h3>
-                    <h3>Cathy Dates</h3>
-
-                    <p class="text-lighjt">cathydates@gmail.com</p>
-                    <p id="logMsg"></p>
-                    <div class="mb-2">
-                        <button type="button" id="call" class="btn btn-outline-light mb-3">
-                            Call 5045154776
-                        </button>
-                        <button type="button" id="hangup" class="btn btn-danger" data-dismiss="modal" aria-label="Close"
-                            style="display: none;">
-                            End Call
-                        </button>
-                    </div>
-
-                </div>
-
-            </div>
-        </div>
-    </div>
 
 </div>
 
 
-{{!-- {{> call/call-block}} --}} {{!-- {{> createTicket/create-block}} --}}
+{{> call/call-block}} {{> createTicket/create-block}}
 <script>
     $(function () {
         $("#reply").click(function () {
