--- a/views/partials/navbar/nav-block.handlebars
+++ b/views/partials/navbar/nav-block.handlebars
@@ -5,7 +5,7 @@
     <div class="logo text-center">
         {{!-- <a href="#"> --}}
         <div id="brandName">
-            impact x
+            Impact X
         </div>
         <div> <img src="assets/images/LogoMakr_1WwSOv.png" width="40" height="40" alt=""></div>
 
