--- a/views/partials/navbar/nav-block.handlebars
+++ b/views/partials/navbar/nav-block.handlebars
@@ -26,7 +26,7 @@
 
     </div>
 
-    <ul class="list-unstyled components">
+    <ul class="list-unstyled components text-center">
 
         <li>
             <a href="/" id="dashBtn">
@@ -58,7 +58,7 @@
         </li>
     </ul>
     <div class="line"></div>
-    <ul class="list-unstyled components">
+    <ul class="list-unstyled components text-center">
         <li>
             <a href="/logout">
                 <i class="fas fa-sign-out-alt"></i>
