fixed nested forms

--- a/views/partials/navbar/nav-block.handlebars
+++ b/views/partials/navbar/nav-block.handlebars
@@ -16,7 +16,7 @@
 
 
     <div class="sidebar-header text-center">
-        <img src={{img}} alt="" id="profileImage">
+        <img src={{img}} alt="Profile Image" id="profileImage">
 
 
 
